--- a/Tests/Rans/Rayleigh_Benard_Convection_Ra_10e9/control
+++ b/Tests/Rans/Rayleigh_Benard_Convection_Ra_10e9/control
@@ -7,12 +7,12 @@
  HEAT_TRANSFER   yes
 
  TIME_STEP                            0.02
- NUMBER_OF_TIME_STEPS                12000
- STARTING_TIME_STEP_FOR_STATISTICS    1200
+ NUMBER_OF_TIME_STEPS                 2038
+ STARTING_TIME_STEP_FOR_STATISTICS    1
 
-# LOAD_BACKUP_NAME   rb_conv-ts008303.backup 
- RESULTS_SAVE_INTERVAL    1200
- BACKUP_SAVE_INTERVAL     1200
+# LOAD_BACKUP_NAME   rb_conv-ts002000.backup 
+ RESULTS_SAVE_INTERVAL    200
+ BACKUP_SAVE_INTERVAL     200
 
 #-------------------
 # Monitoring points 
@@ -52,8 +52,11 @@
  TIME_INTEGRATION_SCHEME  parabolic
 
  ADVECTION_SCHEME_FOR_MOMENTUM     blended
- BLENDING_COEFFICIENT_FOR_MOMENTUM 0.99
+ BLENDING_COEFFICIENT_FOR_MOMENTUM 0.95
  ADVECTION_SCHEME_FOR_ENERGY      smart
+
+ MIN_SIMPLE_ITERATIONS                           3
+# MAX_SIMPLE_ITERATIONS                           1
 
  PRECONDITIONER_FOR_SYSTEM_MATRIX    incomplete_cholesky
 
@@ -73,12 +76,12 @@
 #---------------------
 # Boundary conditions
 #---------------------
-  BOUNDARY_CONDITION    lower_wall
+  BOUNDARY_CONDITION    wall
     TYPE                wall
     VARIABLES           u     v     w     t     t2 
     VALUES              0.0   0.0   0.0   15.0  0.0
 
-  BOUNDARY_CONDITION    upper_wall
-    TYPE                wall
+  BOUNDARY_CONDITION    symmetry 
+    TYPE                symmetry
     VARIABLES           u     v     w     t     t2
-    VALUES              0.0   0.0   0.0   5.0   0.0 
+    VALUES              0.0   0.0   0.0   17.0   0.0 
